--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
-author: GitHub User # You :P
+title: wotngo # your site title
+author: wotngo # You :P
 description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/sleek" # the subpath of your site, e.g. /blog
+baseurl: "/wotngo" # the subpath of your site, e.g. /blog
 url: "https://wotngo.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
